_implementation/task5/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: booking-service-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: booking-service
spec:
  hosts:
    - '*'
  gateways:
    - booking-service-gateway
  http:
    - name: feature-enabled-v2-ping
      match:
        - uri:
            exact: /ping
          method:
            exact: GET
          headers:
            x-istio-feature-target:
              exact: v2
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,gateway-error,connect-failure,refused-stream
      route:
        - destination:
            host: booking-service
            subset: v2

    - name: canary-ping
      match:
        - uri:
            exact: /ping
          method:
            exact: GET
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,gateway-error,connect-failure,refused-stream
      route:
        - destination:
            host: booking-service-fallback-caddy
            port:
              number: 80
          weight: 90
        - destination:
            host: booking-service
            subset: v2
          weight: 10

    - name: default-canary
      route:
        - destination:
            host: booking-service
            subset: v1
          weight: 90
        - destination:
            host: booking-service
            subset: v2
          weight: 10
